Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_AActor_GetPlacementExtent(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetPlacementExtent());
	}
	DOTNET_EXPORT auto E_AActor_GetRemoteRole(AActor* Self)
	{
		return Self->GetRemoteRole();
	}
	DOTNET_EXPORT auto E_AActor_GetReplicatedComponents(AActor* Self)
	{
		return ConvertToManage_TemplatePointerDescription(Self->GetReplicatedComponents());
	}
	DOTNET_EXPORT auto E_AActor_GetRootComponent(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetRootComponent());
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionCylinder(AActor* Self, float CollisionRadius, float CollisionHalfHeight)
	{
		auto& _p0 = CollisionRadius;
		auto& _p1 = CollisionHalfHeight;
		Self->GetSimpleCollisionCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionCylinderExtent(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetSimpleCollisionCylinderExtent());
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionHalfHeight(AActor* Self)
	{
		return Self->GetSimpleCollisionHalfHeight();
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionRadius(AActor* Self)
	{
		return Self->GetSimpleCollisionRadius();
	}
	DOTNET_EXPORT auto E_AActor_GetSquaredDistanceTo(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		return Self->GetSquaredDistanceTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetTargetLocation(AActor* Self, AActor* RequestedBy)
	{
		auto _p0 = RequestedBy;
		return (INT_PTR) new FVector(Self->GetTargetLocation(_p0));
	}
	DOTNET_EXPORT auto E_AActor_GetTearOff(AActor* Self)
	{
		return Self->GetTearOff();
	}
	DOTNET_EXPORT auto E_AActor_GetTickableWhenPaused(AActor* Self)
	{
		return Self->GetTickableWhenPaused();
	}
	DOTNET_EXPORT auto E_AActor_GetTransform(AActor* Self)
	{
		return (INT_PTR) new FTransform(Self->GetTransform());
	}
	DOTNET_EXPORT auto E_AActor_GetVelocity(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetVelocity());
	}
	DOTNET_EXPORT auto E_AActor_GetVerticalDistanceTo(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		return Self->GetVerticalDistanceTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetWorldSettings(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetWorldSettings());
	}
	DOTNET_EXPORT auto E_AActor_HasActiveCameraComponent(AActor* Self)
	{
		return Self->HasActiveCameraComponent();
	}
	DOTNET_EXPORT auto E_AActor_HasActivePawnControlCameraComponent(AActor* Self)
	{
		return Self->HasActivePawnControlCameraComponent();
	}
	DOTNET_EXPORT auto E_AActor_HasActorBegunPlay(AActor* Self)
	{
		return Self->HasActorBegunPlay();
	}
	DOTNET_EXPORT auto E_AActor_HasAuthority(AActor* Self)
	{
		return Self->HasAuthority();
	}
	DOTNET_EXPORT auto E_AActor_HasDeferredComponentRegistration(AActor* Self)
	{
		return Self->HasDeferredComponentRegistration();
	}
	DOTNET_EXPORT auto E_AActor_HasLocalNetOwner(AActor* Self)
	{
		return Self->HasLocalNetOwner();
	}
	DOTNET_EXPORT auto E_AActor_HasNetOwner(AActor* Self)
	{
		return Self->HasNetOwner();
	}
	DOTNET_EXPORT auto E_AActor_HasValidRootComponent(AActor* Self)
	{
		return Self->HasValidRootComponent();
	}
	DOTNET_EXPORT auto E_AActor_IncrementalRegisterComponents(AActor* Self, int32 NumComponentsToRegister)
	{
		auto _p0 = NumComponentsToRegister;
		return Self->IncrementalRegisterComponents(_p0);
	}
	DOTNET_EXPORT auto E_AActor_InitializeComponents(AActor* Self)
	{
		Self->InitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_InternalTakePointDamage(AActor* Self, float Damage, INT_PTR PointDamageEvent, AController* EventInstigator, AActor* DamageCauser)
	{
		auto _p0 = Damage;
		auto& _p1 = *(FPointDamageEvent*)PointDamageEvent;
		auto _p2 = EventInstigator;
		auto _p3 = DamageCauser;
		return ((E_PROTECTED_WRAP_AActor*)Self)->InternalTakePointDamage_WRAP(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_InternalTakeRadialDamage(AActor* Self, float Damage, INT_PTR RadialDamageEvent, AController* EventInstigator, AActor* DamageCauser)
	{
		auto _p0 = Damage;
		auto& _p1 = *(FRadialDamageEvent*)RadialDamageEvent;
		auto _p2 = EventInstigator;
		auto _p3 = DamageCauser;
		return ((E_PROTECTED_WRAP_AActor*)Self)->InternalTakeRadialDamage_WRAP(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_InvalidateLightingCache(AActor* Self)
	{
		Self->InvalidateLightingCache();
	}
	DOTNET_EXPORT auto E_AActor_InvalidateLightingCacheDetailed(AActor* Self, bool bTranslationOnly)
	{
		auto _p0 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsActorBeginningPlay(AActor* Self)
	{
		return Self->IsActorBeginningPlay();
	}
	DOTNET_EXPORT auto E_AActor_IsActorBeingDestroyed(AActor* Self)
	{
		return Self->IsActorBeingDestroyed();
	}
	DOTNET_EXPORT auto E_AActor_IsActorInitialized(AActor* Self)
	{
		return Self->IsActorInitialized();
	}
	DOTNET_EXPORT auto E_AActor_IsActorTickEnabled(AActor* Self)
	{
		return Self->IsActorTickEnabled();
	}
	DOTNET_EXPORT auto E_AActor_IsAttachedTo(AActor* Self, AActor* Other)
	{
		auto _p0 = Other;
		return Self->IsAttachedTo(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsBasedOnActor(AActor* Self, AActor* Other)
	{
		auto _p0 = Other;
		return Self->IsBasedOnActor(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsChildActor(AActor* Self)
	{
		return Self->IsChildActor();
	}
	DOTNET_EXPORT auto E_AActor_IsComponentRelevantForNavigation(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		return Self->IsComponentRelevantForNavigation(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsInPersistentLevel(AActor* Self, bool bIncludeLevelStreamingPersistent)
	{
		auto _p0 = bIncludeLevelStreamingPersistent;
		return Self->IsInPersistentLevel(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsLevelBoundsRelevant(AActor* Self)
	{
		return Self->IsLevelBoundsRelevant();
	}
	DOTNET_EXPORT auto E_AActor_IsMatineeControlled(AActor* Self)
	{
		return Self->IsMatineeControlled();
	}
	DOTNET_EXPORT auto E_AActor_IsNetMode(AActor* Self, ENetMode Mode)
	{
		auto _p0 = Mode;
		return Self->IsNetMode(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsNetRelevantFor(AActor* Self, AActor* RealViewer, AActor* ViewTarget, INT_PTR SrcLocation)
	{
		auto _p0 = RealViewer;
		auto _p1 = ViewTarget;
		auto& _p2 = *(FVector*)SrcLocation;
		return Self->IsNetRelevantFor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_IsNetStartupActor(AActor* Self)
	{
		return Self->IsNetStartupActor();
	}
	DOTNET_EXPORT auto E_AActor_IsOverlappingActor(AActor* Self, AActor* Other)
	{
		auto _p0 = Other;
		return Self->IsOverlappingActor(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsOwnedBy(AActor* Self, AActor* TestOwner)
	{
		auto _p0 = TestOwner;
		return Self->IsOwnedBy(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsPendingKillPending(AActor* Self)
	{
		return Self->IsPendingKillPending();
	}
	DOTNET_EXPORT auto E_AActor_IsRelevancyOwnerFor(AActor* Self, AActor* ReplicatedActor, AActor* ActorOwner, AActor* ConnectionActor)
	{
		auto _p0 = ReplicatedActor;
		auto _p1 = ActorOwner;
		auto _p2 = ConnectionActor;
		return Self->IsRelevancyOwnerFor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_IsReplayRelevantFor(AActor* Self, AActor* RealViewer, AActor* ViewTarget, INT_PTR SrcLocation, float CullDistanceSquared)
	{
		auto _p0 = RealViewer;
		auto _p1 = ViewTarget;
		auto& _p2 = *(FVector*)SrcLocation;
		auto _p3 = CullDistanceSquared;
		return Self->IsReplayRelevantFor(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_IsReplicationPausedForConnection(AActor* Self, INT_PTR ConnectionOwnerNetViewer)
	{
		auto& _p0 = *(FNetViewer*)ConnectionOwnerNetViewer;
		return Self->IsReplicationPausedForConnection(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentCollisionRegistered(AActor* Self)
	{
		return Self->IsRootComponentCollisionRegistered();
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentMovable(AActor* Self)
	{
		return Self->IsRootComponentMovable();
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentStatic(AActor* Self)
	{
		return Self->IsRootComponentStatic();
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentStationary(AActor* Self)
	{
		return Self->IsRootComponentStationary();
	}
	DOTNET_EXPORT auto E_AActor_IsRunningUserConstructionScript(AActor* Self)
	{
		return Self->IsRunningUserConstructionScript();
	}
	DOTNET_EXPORT auto E_AActor_IsWithinNetRelevancyDistance(AActor* Self, INT_PTR SrcLocation)
	{
		auto& _p0 = *(FVector*)SrcLocation;
		return ((E_PROTECTED_WRAP_AActor*)Self)->IsWithinNetRelevancyDistance_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_AActor_K2_AddActorLocalOffset(AActor* Self, INT_PTR DeltaLocation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FVector*)DeltaLocation;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_AddActorLocalOffset(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_AddActorLocalRotation(AActor* Self, INT_PTR DeltaRotation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FRotator*)DeltaRotation;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_AddActorLocalRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_AddActorLocalTransform(AActor* Self, INT_PTR NewTransform, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto& _p0 = *(FTransform*)NewTransform;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_AddActorLocalTransform(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_AddActorWorldOffset(AActor* Self, INT_PTR DeltaLocation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FVector*)DeltaLocation;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_AddActorWorldOffset(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_AddActorWorldRotation(AActor* Self, INT_PTR DeltaRotation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FRotator*)DeltaRotation;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_AddActorWorldRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_AddActorWorldTransform(AActor* Self, INT_PTR DeltaTransform, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto& _p0 = *(FTransform*)DeltaTransform;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_AddActorWorldTransform(_p0, _p1, _p2, _p3);
	}